...
        android:layout_height="350dp"
        android:background="@color/mainblue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_header"
        app:layout_constraintBottom_toTopOf="@id/register_info_button">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:padding="6px"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
...
            android:inputType="text"
            android:maxLength="20"
            android:padding="6px"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="6px"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
...
            android:inputType="textPersonName"
            android:maxLength="10"
            android:padding="6px"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
...
            android:inputType="textPersonName"
            android:maxLength="10"
            android:padding="6px"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
...
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <CheckBox
                android:id="@+id/register_entrant_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="Entrant"
                android:textColor="@color/white"
                android:checked="false"
                android:buttonTint="@color/lightblue"
...
