...
                android:textSize="16dp"
                android:text="Username"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/userFirstAndLastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:textSize="16dp"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:textSize="16dp"
                android:padding="6px"
...
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/userPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="6px"
                android:text="(XXX)-XXX-XXXX"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signOutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/redbtn"
                style="@style/SquareButton"
                android:text="Sign Out" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/editProfileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/bluebtn"
                style="@style/SquareButton"

...
            android:paddingTop="12dp"
            android:text="Past Events"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textSize="24dp"/>
        <ListView
            android:id="@+id/past_events_listview"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@color/white"
            android:padding="8dp" />
    </LinearLayout>

...
