...
                    android:text="Main Settings"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="24dp" />

                <EditText
                    android:id="@+id/userFirstNameTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:autofillHints="Enter a First name"
                    android:background="@color/white"
...
                    android:padding="6px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/userLastNameTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:autofillHints="Enter a Last name"
                    android:background="@color/white"
...
                    android:padding="6px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/userEmailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:autofillHints="Enter a First and Last name"
                    android:background="@color/white"
...
                    android:padding="6px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/userContactInformationInput"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:autofillHints="Enter a First and Last name"
                    android:background="@color/white"
...
                    android:padding="4dp"
                    android:text="Push Notifactions"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/deleteAccountBtn"
                    style="@style/SquareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/redbtn"
                    android:paddingHorizontal="50dp"
                    android:text="Delete Account" />
...
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:backgroundTint="@color/greybtn"-->
<!--                    android:text="Revert Changes" />-->

<!--                <Button-->
<!--                    android:id="@+id/confirmChangesBtn"-->
<!--                    style="@style/SquareButton"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:backgroundTint="@color/bluebtn"-->
<!--                    android:text="Confirm Changes" />-->

...
