...
        android:layout_height="220dp"
        android:background="@color/mainblue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button">

        <EditText
            android:id="@+id/login_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:hint="Email Address / Username"
            android:inputType="textEmailAddress"
            android:padding="6px"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="6px"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/remember_me_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:text="Remember Me"
            android:checked="false"
            android:buttonTint="@color/lightblue"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/register_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:backgroundTint="@color/bluebtn"
        app:layout_constraintTop_toBottomOf="@id/login_information_container"
...
